[package]
name = "PoissonDiskGenerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "PoissonDiskGenerator"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.11.0"
pyo3 = "0.19.0"
rand = { version = "0.8.5", features = ["small_rng"] }
